--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doobots",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "main": "dist/doobots.js",
   "types": "dist/index.d.ts",
   "bin": {
@@ -29,12 +29,16 @@
     "start": "node dist/doobots-runner.js"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.3.1",
     "cross-env": "^10.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
+    "jest": "^30.1.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "test-exclude": "^7.0.1",
+    "glob": "^11.0.3"
   },
   "description": "Helpers do DooBots para execução de código do usuário",
   "license": "MIT"
